--- a/views/login.html
+++ b/views/login.html
@@ -7,7 +7,7 @@
   <title>Red Social</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
   <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <div class="container">
      <nav class="nav bg-blue">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo left"><img src="../assets/images/logotipo.png" alt="logo" class="responsive-img logo"></a>
+          <a href="#" class="brand-logo left"><img src="../assets/images/logos1.png" alt="" class=" logo"></a>
           <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a  href="#">Sobre Nosotros</a></li>
