--- a/css/login.css
+++ b/css/login.css
@@ -7,6 +7,11 @@
 body{
     background-color: #b8d7d4;
 }
+header{
+  width: 100%;
+  height:75px;
+  
+}
 .bg-header{
     background-color: #010e39;
     line-height: 1.5em;
@@ -19,7 +24,7 @@ body{
 }
 .form-login{
     height: 45vh;
-    bottom: 8em;
+    bottom: 25%;
     padding: 4vh;
     border-radius: 2vh;
     z-index: 10;
@@ -55,6 +60,7 @@ body{
     margin-top: 20px;
   }
   .logo{
-    width: 45%;
-    height: 20%;
+    width: 5rem;
+    height: 5rem;
+    padding: 10px;
   }
