--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@
 body{
     background-color: #010e39;
 }
+header{
+  width: 100%;
+  height: 75px;
+}
 .text-logo{
     font-size: 2em;
     font-family: 'Pacifico', serif;
@@ -20,7 +24,7 @@ body{
     text-align: center;
     margin: auto;
     position: relative;
-    top: 25vh;
+    top: 35vh;
     z-index: 10;
 }
 .btn-login{
@@ -34,7 +38,7 @@ input#signup{
     padding-left: 1.5em;
 }
 .btn-login{
-    margin-right: 2vh;
+   /*  margin-right: 2vh; */
     border: 2px solid #b8d7d4;
     background: rgba(0, 0, 0, 0.1);
     width: 26vh;
@@ -109,65 +113,16 @@ input#signup{
         text-align: center;
     }   
 }
-/*
-h1{
-    position: absolute;
-    top: -2vh;
-    font-size: 3em;
-    padding-left: 1.5em;
-    font-family: 'Pacifico', cursive;
+.logo-main{
+    padding-left: 55px;
+ height: 100px;
 }
-.button-op{
-    position: absolute;
-    top: 4vh;
-    right: 4vh;
-}
-.btn-login{
-    margin-right: 2vh;
-    border: 2px solid #b8d7d4;
-    background: rgba(0, 0, 0, 0.1);
-    width: 26vh;
-}
-.btn-signup, .btn-login{
-    border-radius: 20vh;
-    font-weight: 600;
-}
-.btn-signup{
-   background: #b8d7d4; 
-   color: #0e1217;
-   width: 25vh;
-}
-.form-signup{
-    position: absolute;
-    width: 55vh;
-    right: 10vh;
-    top: 20vh;
-    background: #eef3ed;
-    padding: 4vh;
-    border-radius: 2vh;
-    z-index: 10;
-}
-#particles-js{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    top: 20vh;
-}
-.button-account{
-    align-items: center;
-    margin: auto;
-    align-self: center;
-}
-.text-center{
-    text-align: center;
-}
-*/
 /*Estilos para la pagina Publicaciones*/
 .bg-blue{
     background-color: #010e39;
   }
   .bg-beige{
-    background-color: #eef3ed;
+    background-color: #eef3ed!important;
   }
   .bg-light-blue{
     background-color:  #b8d7d4!important;
@@ -194,6 +149,45 @@ h1{
     width: 90%!important;
   }
   .logo{
-    width: 45%;
-    height: 20%;
+    width: 7rem;
+    height: 7rem;
+    padding: 10px;
+    position: absolute;
+    top: 50px;
+    left: 35%;
   }
+  /* Estilos para la vista newsfeed*/
+  .card-profile{
+      margin-top: 30px;
+      padding: 20px;
+      border-radius: 5px;
+      
+  }
+  .container-card{
+      width: 90%;
+  }
+  .img-user{
+    width: 8vh;
+    height: 8vh;
+    border-radius: 100%;
+    border: 3px solid #e9d271;
+}
+.input-field{
+    width: 20vh;
+    display: inline-block;
+    top: -2vh;
+}
+
+.file-field{
+    display: inline-block;
+}
+.img-input{
+    width: 20vh;
+    height: 20vh;
+}
+.vh420{
+    height: 45vh;
+}
+.fa-heart{
+    color: salmon;
+}
