--- a/css/newsfeed.css
+++ b/css/newsfeed.css
@@ -16,6 +16,10 @@ html{
 body{
     background-color: #b8d7d4;
 }
+header{
+    width: 100;
+    height: 75px;
+}
 .bg-header{
     background-color: #010e39;
     height: 6em;
@@ -317,3 +321,4 @@ form.form{
         margin-right: 6vh;
     }
 }
+
