--- a/views/login.html
+++ b/views/login.html
@@ -9,14 +9,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
   <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
-<body>
+<body class="bg-light-blue">
   <!-- navigation -->
   <header class="bg-blue">
     <div class="container">
      <nav class="nav bg-blue">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo left"><img src="../assets/images/logos1.png" alt="" class=" logo"></a>
+          <a href="#" class="brand-logo left"><img src="../assets/images/logos1.png" alt="" class="logo"></a>
           <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a  href="#">Sobre Nosotros</a></li>
@@ -39,7 +40,7 @@
     </div>
   </header>
   <!-- form -->
-  <div class="container form-login">
+  <div class="container form-login bg-beige">
     <label for="email">Email</label>
     <input id="email" type="email" class="validate">
     <label for="password">Password</label>
@@ -48,7 +49,6 @@
     <div class="text-center">
       <button class="btn btn-account" id="button-login" disabled="true">inicia sesión</button>
     </div>
-   
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> 
