--- a/css/main.css
+++ b/css/main.css
@@ -1,193 +1,204 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 body{
-    background-color: #010e39;
+   background-color: #010e39;
 }
 header{
   width: 100%;
   height: 75px;
 }
 .text-logo{
-    font-size: 2em;
-    font-family: 'Pacifico', serif;
-    position: relative;
-    left: 3vh;
+  font-size: 2em;
+  font-family: 'Pacifico', serif;
+  position: relative;
+  left: 3vh;
 }
 .form-signup{
     display: none;
 }
 .button-op{
-    width: 35vh;
-    text-align: center;
-    margin: auto;
-    position: relative;
-    top: 35vh;
-    z-index: 10;
+  width: 35vh;
+  text-align: center;
+  margin: auto;
+  position: relative;
+  top: 35vh;
+  z-index: 10;
 }
 .btn-login{
-    margin-bottom: 4vh;
-    text-align: center;
+  margin-bottom: 4vh;
+  text-align: center;
 }
 input#login{
-    padding-left: 3vh;
+  padding-left: 3vh;
 }
 input#signup{
-    padding-left: 1.5em;
+  padding-left: 1.5em;
 }
 .btn-login{
-   /*  margin-right: 2vh; */
-    border: 2px solid #b8d7d4;
-    background: rgba(0, 0, 0, 0.1);
-    width: 26vh;
+  /*  margin-right: 2vh; */
+  border: 2px solid #b8d7d4;
+  background: rgba(0, 0, 0, 0.1);
+  width: 26vh;
 }
 .btn-signup, .btn-login{
-    border-radius: 20vh;
-    font-weight: 600;
+  border-radius: 20vh;
+  font-weight: 600;
 }
 .btn-signup{
-   background: #b8d7d4; 
-   color: #0e1217;
-   width: 25vh;
+  background: #b8d7d4; 
+  color: #0e1217;
+  width: 25vh;
 }
 @media (min-width:500px){
     h1{
-        position: absolute;
-        top: -2vh;
-        font-size: 3em;
-        padding-left: 1.5em;
-        font-family: 'Pacifico', cursive;
+      position: absolute;
+      top: -2vh;
+      font-size: 3em;
+      padding-left: 1.5em;
+      font-family: 'Pacifico', cursive;
     }
     .button-op{
-        position: absolute;
-        top: 4vh;
-        right: 4vh;
-        width: auto;
+      position: absolute;
+      top: 4vh;
+      right: 4vh;
+      width: auto;
     }
     .btn-login{
-        margin-right: 2vh;
-        border: 2px solid #b8d7d4;
-        background: rgba(0, 0, 0, 0.1);
-        width: 26vh;
+      margin-right: 2vh;
+      border: 2px solid #b8d7d4;
+      background: rgba(0, 0, 0, 0.1);
+      width: 26vh;
     }
     .btn-signup, .btn-login{
-        border-radius: 20vh;
-        font-weight: 600;
+      border-radius: 20vh;
+      font-weight: 600;
     }
     .btn-signup{
-       background: #b8d7d4; 
-       color: #0e1217;
-       width: 25vh;
-       position: relative;
-       top: -2vh;
+      background: #b8d7d4; 
+      color: #0e1217;
+      width: 25vh;
+      position: relative;
+      top: -2vh;
     }
     .form-signup{
-        display: block;
-        position: absolute;
-        bottom: 13vh;
+      display: block;
+      position: absolute;
+      bottom: 13vh;
     }
     .form-signup{
-        position: absolute;
-        width: 55vh;
-        right: 10vh;
-        top: 20vh;
-        background: #eef3ed;
-        padding: 4vh;
-        border-radius: 2vh;
-        z-index: 10;
+      position: absolute;
+      width: 55vh;
+      right: 10vh;
+      top: 20vh;
+      background: #eef3ed;
+      padding: 4vh;
+      border-radius: 2vh;
+      z-index: 10;
     }
     #particles-js{
-        width: 100%;
-        height: 100vh;
-        position: relative;
-        top: 20vh;
+      width: 100%;
+      height: 100vh;
+      position: relative;
+      top: 20vh;
     }
     .button-account{
-        align-items: center;
-        margin: auto;
-        align-self: center;
+      align-items: center;
+      margin: auto;
+      align-self: center;
     }
     .text-center{
-        text-align: center;
+      text-align: center;
     }   
 }
 .logo-main{
-    padding-left: 55px;
- height: 100px;
+  padding-left: 55px;
+  height: 100px;
 }
 /*Estilos para la pagina Publicaciones*/
 .bg-blue{
-    background-color: #010e39;
-  }
+  background-color: #010e39;
+}
   .bg-beige{
-    background-color: #eef3ed!important;
-  }
+   background-color: #eef3ed!important;
+}
   .bg-light-blue{
-    background-color:  #b8d7d4!important;
-  }
+   background-color:  #b8d7d4!important;
+}
   .bg-amber{  
     background-color: #E9D271;
-  }
+}
   .bg-acero{
-    background-color: rgb(0, 103, 140);
-  }
+  background-color: rgb(0, 103, 140);
+}
   .container-publish{
-    border-radius: 5px;
-    padding: 10px;
-  }
-  #main{
-    margin-top: 20px;
-  }
-  .img-user{
-    width:10vh;
-    height: 10vh;
-    margin-top: 20px;
-  }
-  .container-90{
-    width: 90%!important;
-  }
-  .logo{
+  border-radius: 5px;
+  padding: 10px;
+}
+#main{
+  margin-top: 20px;
+}
+.img-user{
+  width:10vh;
+  height: 10vh;
+  margin-top: 20px;
+}
+.container-90{
+  width: 90%!important;
+}
+.logo-tipo{
     width: 7rem;
     height: 7rem;
     padding: 10px;
     position: absolute;
     top: 50px;
     left: 35%;
-  }
+}
   /* Estilos para la vista newsfeed*/
-  .card-profile{
-      margin-top: 30px;
-      padding: 20px;
-      border-radius: 5px;
+.card-profile{
+  margin-top: 30px;
+  padding: 20px;
+  border-radius: 5px;
       
-  }
-  .container-card{
-      width: 90%;
-  }
-  .img-user{
-    width: 8vh;
-    height: 8vh;
-    border-radius: 100%;
-    border: 3px solid #e9d271;
+}
+.container-card{
+  width: 90%;
+}
+.img-user{
+  width: 8vh;
+  height: 8vh;
+  border-radius: 100%;
+  border: 3px solid #e9d271;
 }
 .input-field{
-    width: 20vh;
-    display: inline-block;
-    top: -2vh;
+  width: 20vh;
+  display: inline-block;
+  top: -2vh;
 }
 
 .file-field{
-    display: inline-block;
+  display: inline-block;
 }
 .img-input{
-    width: 20vh;
-    height: 20vh;
+  width: 20vh;
+  height: 20vh;
 }
 .vh420{
-    height: 45vh;
+  height: 45vh;
 }
 .fa-heart{
-    color: salmon;
+  color: salmon;
+}
+/* Estilos para Dropdow Friends */
+.img-friends{
+  width: 8vh;
+  height: 8vh;
+  border-radius: 100%;
+}
+.logo{
+  width: 5rem;
+  height: 5rem;
+  padding: 10px;
 }
