--- a/views/newsfeed.html
+++ b/views/newsfeed.html
@@ -17,10 +17,10 @@
     <div class="container">
       <nav class="nav bg-blue">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo left logo"><img src="../assets/images/logos1.png" alt="" class="logo"></a>
+          <a href="#" class="brand-logo left"><img src="../assets/images/logos1.png" alt="" class="logo"></a>
           <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a id="group" href="#"><i class="material-icons">group</i></a></li>
+            <li><a id="group" href="#"><i class="material-icons" data-activates='dropdown1'>group</i></a></li>
             <li><a id="notifications" href="#"><i class="material-icons">notifications</i></a></li>
             <li><a id="message" class="modal-trigger" href="#modal1"><i class="material-icons">message</i></a></li>
             <li><a href=""><i class="material-icons">account_circle</i></a></li>
@@ -44,6 +44,13 @@
           </ul>
         </div>
       </nav>
+      <ul id='dropdown1' class='dropdown-content'>
+        <li><a href="#!">two</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">three</a></li>
+        <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+        <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+      </ul>
     </div>
   </header>
   <div class="container" id="main">
