--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,24 @@ input#signup{
   color: #0e1217;
   width: 25vh;
 }
+#span-signup{
+  background-color: khaki;
+  border-radius: 1vh;
+  position: absolute;
+  top: 28vh;
+  left: -40vh;
+  right: 56vh;
+  margin: 0;
+  display: flex;
+  display: none;
+  padding: 1vh;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  z-index: 1;
+  width: auto;
+  height: auto;
+}
 @media (min-width:500px){
     h1{
       position: absolute;
@@ -84,13 +102,11 @@ input#signup{
       top: -2vh;
     }
     .form-signup{
+      position: absolute;
       display: block;
-      position: absolute;
       bottom: 13vh;
-    }
-    .form-signup{
-      position: absolute;
       width: 55vh;
+      height: 65vh;
       right: 10vh;
       top: 20vh;
       background: #eef3ed;
@@ -109,9 +125,15 @@ input#signup{
       margin: auto;
       align-self: center;
     }
+    #button-signup{
+      background: silver;
+    }
     .text-center{
       text-align: center;
-    }   
+    }  
+    .terms{
+      margin-top: 2vh;
+    } 
 }
 .logo-main{
   padding-left: 55px;
