--- a/views/signup.html
+++ b/views/signup.html
@@ -42,14 +42,14 @@
   <!-- form -->
   <div class="container form-login bg-beige">
     <label for="name">Name</label>
-    <input id="name" type="text" class="validate">
+    <input id="name-2" type="text" class="validate">
     <label for="email">Email</label>
-    <input id="email" type="email" class="validate">
+    <input id="email-2" type="email" class="validate">
     <label for="password">Password</label>
-    <input id="password" type="password" class="validate">
+    <input id="password-2" type="password" class="validate">
     <br><br>
     <div class="text-center">
-      <button class="btn btn-account" id="button-signup" disabled="true">registrate</button>
+      <button class="btn btn-account" id="signup-button" disabled>registrate</button>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
