--- a/views/publications.html
+++ b/views/publications.html
@@ -17,8 +17,8 @@
      <nav class="nav bg-blue">
         <div class="nav-wrapper">
           <a href="#" class="brand-logo left logo responsive-img"><img src="../assets/images/logo.png" alt=""></a>
-          <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <a href="#" data-activates="mobile-demo" class="button-collapse left"><i class="material-icons">menu</i></a>
+          <ul id="nav-mobile" class="rigth hide-on-med-and-down">
             <li><a id="group" href="#"><i class="material-icons">group</i></a></li>
             <li><a id="notifications" href="#"><i class="material-icons">notifications</i></a></li>
             <li><a id="message" class="modal-trigger" href="#modal1"><i class="material-icons">message</i></a></li>
